Fix page not visible

--- a/styles/flex.sass
+++ b/styles/flex.sass
@@ -17,7 +17,6 @@
   flex: 1
   min-height: 0
   min-width: 0
-  flex-basis: 0
 
 .flex-0
   flex-grow: 0
